[gd_scene load_steps=3 format=3 uid="uid://bln7uier0j2b7"]

[ext_resource type="Script" uid="uid://1fdyq7mj17yr" path="res://UI/shared/settings/sound.gd" id="1_qx65e"]
[ext_resource type="Theme" uid="uid://drkq4gwhuu362" path="res://mess-to-be-cleaned/ui/shared/graphics/themes/default_label.tres" id="1_r25r4"]

[node name="SettingsBase" type="VBoxContainer"]
theme_override_constants/separation = 10
script = ExtResource("1_qx65e")

[node name="Label" type="Label" parent="."]
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("1_r25r4")
text = "Dźwięk"

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_r25r4")
theme_override_font_sizes/font_size = 18
text = "Dźwięk gry"

[node name="master" type="HSlider" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
value = 50.0

[node name="MarginContainer3" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer3"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="MarginContainer3/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_r25r4")
theme_override_font_sizes/font_size = 18
text = "Muzyka"

[node name="music" type="HSlider" parent="MarginContainer3/VBoxContainer"]
layout_mode = 2
value = 50.0

[node name="MarginContainer4" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer4"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="MarginContainer4/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_r25r4")
theme_override_font_sizes/font_size = 18
text = "Efekty"

[node name="sfx" type="HSlider" parent="MarginContainer4/VBoxContainer"]
layout_mode = 2
theme_override_constants/center_grabber = 1
value = 50.0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_vertical = 10
size_flags_stretch_ratio = 0.35
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="navigation" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="Back" type="Button" parent="MarginContainer/navigation"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cofnij"

[node name="Save" type="Button" parent="MarginContainer/navigation"]
layout_mode = 2
size_flags_horizontal = 3
text = "Zapisz"

[connection signal="drag_ended" from="MarginContainer2/VBoxContainer/master" to="." method="_on_master_drag_ended"]
[connection signal="drag_ended" from="MarginContainer3/VBoxContainer/music" to="." method="_on_music_drag_ended"]
[connection signal="drag_ended" from="MarginContainer4/VBoxContainer/sfx" to="." method="_on_sfx_drag_ended"]
[connection signal="pressed" from="MarginContainer/navigation/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="MarginContainer/navigation/Save" to="." method="_on_back_pressed"]
